[FIX] Text overflow in intro

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+
+:root {
+  --primary-color: rgba(22, 21, 29, 0.85); /* Соответствует $color1 */
+  --secondary-color: rgba(155, 155, 255, 0.85); /* Соответствует $color2 */
+  --accent-color: rgba(128, 159, 247, 0.7); /* Соответствует $color3 */
+  --text-color: rgba(255, 255, 255, 1);
+}
+
 ::-webkit-scrollbar {
   /* 1 - скроллбар */
   width: 7px;
@@ -7,12 +15,12 @@
 
 ::-webkit-scrollbar-button {
   /* 2 - кнопка */
-  background-color: rgba(22, 21, 29, 0.85);
+  background-color: var(--primary-color);
 }
 
 ::-webkit-scrollbar-track {
   /* 3 - трек */
-  background-color: rgba(22, 21, 29, 0.85);
+  background-color: var(--primary-color);
 }
 
 ::-webkit-scrollbar-track-piece {
@@ -22,7 +30,7 @@
 ::-webkit-scrollbar-thumb {
   /* 5 - ползунок */
   border-radius: 2px;
-  background-color: rgba(155, 155, 255, 0.85);
+  background-color: var(--secondary-color);
 }
 
 ::-webkit-scrollbar-corner {
@@ -40,7 +48,7 @@
 
 html,
 body {
-  background-color: rgba(155, 155, 255, 0.85);
+  background-color: var(--secondary-color);
   font-size: 16px;
   padding: 0;
   margin: 0;
@@ -56,8 +64,8 @@ body {
 
 .intro {
   height: 100vh;
-  background-color: rgba(22, 21, 29, 0.85);
-  color: rgba(155, 155, 255, 0.85);
+  background-color: var(--primary-color);
+  color: var(--text-color);
 }
 .intro h1 {
   margin-top: 0;
@@ -83,12 +91,13 @@ body {
   max-width: 300px;
   max-height: 400px;
   margin-top: 100px;
-  color: rgba(155, 155, 255, 0.85);
+  color: var(--text-color);
   perspective: 1000px;
   transform-origin: center;
 }
 .icon-cards h1 {
   font-size: 1.2rem;
+  width: 100%;
 }
 .icon-cards__content {
   position: absolute;
@@ -149,7 +158,7 @@ body {
   }
 }
 .main {
-  background: linear-gradient(rgba(22, 21, 29, 0.85), rgba(155, 155, 255, 0.85));
+  background: linear-gradient(var(--primary-color), var(--secondary-color));
   padding-top: 50px;
 }
 
@@ -171,14 +180,13 @@ body {
   position: relative;
   width: auto;
   overflow: hidden;
-  margin: 10px 10px;
-  cursor: pointer;
-  color: rgba(155, 155, 255, 0.85);
+  margin: 5px;
   border-radius: 5px;
+  color: var(--text-color);
 }
 .card h1 {
   position: absolute;
-  top: 85%;
+  top: 90%;
   left: 50%;
   transform: translate(-50%, -50%); /* Центрирование относительно левого верхнего угла */
   font-size: 1.2rem;
@@ -204,33 +212,33 @@ body {
 .search input {
   border-radius: 12px;
   height: 20px;
-  background-color: rgba(22, 21, 29, 0.85);
-  color: rgba(155, 155, 255, 0.85);
+  background-color: var(--primary-color);
+  color: var(--text-color);
   border: none;
   padding-left: 12px;
   font-family: "Koulen", cursive;
 }
 .search input:focus {
-  outline: 3px ridge rgba(155, 155, 255, 0.85);
+  outline: 3px ridge var(--text-color);;
   border-radius: 2rem;
 }
 .search button {
   cursor: pointer;
   border-radius: 12px;
-  background-color: rgba(22, 21, 29, 0.85);
-  color: rgba(155, 155, 255, 0.85);
+  background-color: var(--primary-color);
+  color: var(--text-color);
   font-size: 1rem;
   padding: 5px 10px;
   border: none;
   transition: 0.5s;
 }
 .search button:hover {
-  box-shadow: inset 0 3rem 0 -1px rgba(128, 159, 247, 0.7);
+  box-shadow: inset 0 3rem 0 -1px var(--accent-color);
 }
 
 .searchNav {
-  background-color: rgba(22, 21, 29, 0.85);
-  color: rgba(155, 155, 255, 0.85);
+  background-color: var(--primary-color);
+  color: var(--text-color);
   border-radius: 16px;
   margin-top: 10px;
   display: flex;
@@ -255,25 +263,25 @@ body {
 }
 
 footer {
-  background: linear-gradient(rgba(155, 155, 255, 0.85), rgba(22, 21, 29, 0.85));
+  background: linear-gradient(var(--secondary-color), var(--primary-color));
   height: 10vh;
   text-align: center;
   margin-top: 50px;
 }
 footer a {
   font-size: 2rem;
-  color: rgba(22, 21, 29, 0.85);
+  color: var(--primary-color);
   cursor: pointer;
   transition: 0.5s;
   margin: 0 10px;
   text-decoration: none;
 }
 footer a:hover {
-  color: rgba(128, 159, 247, 0.7);
+  color: var(--accent-color);
 }
 footer p {
   font-size: 1.2rem;
-  color: rgba(22, 21, 29, 0.85);
+  color: var(--primary-color);
 }
 
 .back {
@@ -292,7 +300,7 @@ footer p {
   margin: 0 10px;
 }
 .back:hover {
-  background-color: rgba(128, 159, 247, 0.7);
+  background-color: var(--accent-color);
   transition: 1s;
   border-radius: 10px;
 }
@@ -313,7 +321,7 @@ footer p {
 
 .specialH1 {
   text-align: center;
-  color: rgba(155, 155, 255, 0.85);
+  color: var(--text-color);
 }
 
 .rating {
